--- a/tests/index.html
+++ b/tests/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 		<script type="text/javascript" src="qunit.js"></script>
 		<script type="text/javascript" src="../jquery.binddata.js"></script>
+		<script type="text/javascript" src="../../jquery.observable/jquery.observable.js"></script>
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
