--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>jquery.observable unit tests</title>
+		<title>jquery.binddata unit tests</title>
 		<link rel="stylesheet" href="qunit.css" type="text/css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 		<script type="text/javascript" src="qunit.js"></script>
@@ -11,10 +11,18 @@
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
-		<h1 id="qunit-header">jquery.observable unit tests</h1>
+		<h1 id="qunit-header">jquery.binddata unit tests</h1>
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
+		
+		<div id="test-templates">
+		
+			<div id="outputtest">
+				<b> ${name} </b>
+			</div>
+		
+		</div>
 	</body>
 </html>
