--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
-		<h1 id="qunit-header">jquery.binddata unit tests</h1>
+		<h1 class="qunit-header">jquery.binddata unit tests</h1>
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		<h2 id="qunit-userAgent"></h2>
@@ -25,16 +25,16 @@
 			</div>
 			
 			<div id="iftest">
-				<i>{{if render}} <u> ${name} </u> {{/if}}</i>
+				<i>{{if render}} <u id="uif"> ${name} </u> {{/if}}</i>
 			</div>
 
 			<div id="ifelseiftest">
 				{{ if render == 'name'}}
-					<b>${name}</b>
+					<span class="name">${name}</span>
 				{{ elseif render == 'email'}}
-					<b>${email}</b>
+					<span class="email">${email}</span>
 				{{ else }}
-					<u>nothing to render</u>
+					<span class="nothing">nothing to render</span>
 				{{/if}}
 				
 			</div>
