exploded previous code to multiple files - bak.jquery.binddata contains previous code, it should be deleted later

--- a/tests/index.html
+++ b/tests/index.html
@@ -6,11 +6,16 @@
 		<link rel="stylesheet" href="qunit.css" type="text/css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 		<script type="text/javascript" src="qunit.js"></script>
-		<script type="text/javascript" src="../jquery.binddata.js"></script>
+		<!-- <script type="text/javascript" src="../jquery.binddata.js"></script> -->
+		<script type="text/javascript" src="../namespace.js"></script>
 		<script type="text/javascript" src="../../jquery.observable/jquery.observable.js"></script>
-		<script type="text/javascript" src="tests.js"></script>
 		<script type="text/javascript" src="../DOMIterator.js"></script>
+		<script type="text/javascript" src="../Expression.js"></script>
+		<script type="text/javascript" src="../TextElemParser.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
+		<script type="text/javascript" src="Expression.test.js"></script>
+		<script type="text/javascript" src="TextElemParser.test.js"></script>
+		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
 		<h1 class="qunit-header">jquery.binddata unit tests</h1>
