--- a/tests/index.html
+++ b/tests/index.html
@@ -12,9 +12,11 @@
 		<script type="text/javascript" src="../DOMIterator.js"></script>
 		<script type="text/javascript" src="../Expression.js"></script>
 		<script type="text/javascript" src="../TextElemParser.js"></script>
+		<script type="text/javascript" src="../NodeController.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
+		<script type="text/javascript" src="NodeController.test.js"></script>
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
