OutputNodeController creation implemented & tested

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,7 +12,10 @@
 		<script type="text/javascript" src="../DOMIterator.js"></script>
 		<script type="text/javascript" src="../Expression.js"></script>
 		<script type="text/javascript" src="../TextElemParser.js"></script>
+		<script type="text/javascript" src="../ChildNodeController.js"></script>
+		<script type="text/javascript" src="../ElemPosition.js"></script>
 		<script type="text/javascript" src="../NodeController.js"></script>
+		<script type="text/javascript" src="../OutputNodeController.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
