--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="../ElemPosition.js"></script>
 		<script type="text/javascript" src="../NodeController.js"></script>
 		<script type="text/javascript" src="../OutputNodeController.js"></script>
+		<script type="text/javascript" src="../IfNodeController.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
