added else-elseif data structure implementation

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>jquery.binddata unit tests</title>
+		<title>jquery.wiredui unit tests</title>
 		<link rel="stylesheet" href="qunit.css" type="text/css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 		<script type="text/javascript" src="qunit.js"></script>
@@ -17,6 +17,8 @@
 		<script type="text/javascript" src="../NodeController.js"></script>
 		<script type="text/javascript" src="../OutputNodeController.js"></script>
 		<script type="text/javascript" src="../IfNodeController.js"></script>
+		<script type="text/javascript" src="../ElseIfNodeController.js"></script>
+		<script type="text/javascript" src="../ElseNodeController.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
@@ -24,7 +26,7 @@
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
-		<h1 class="qunit-header">jquery.binddata unit tests</h1>
+		<h1 class="qunit-header">jquery.wiredui unit tests</h1>
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		<h2 id="qunit-userAgent"></h2>
