each syntax tree

--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="../IfNodeController.js"></script>
 		<script type="text/javascript" src="../ElseIfNodeController.js"></script>
 		<script type="text/javascript" src="../ElseNodeController.js"></script>
+		<script type="text/javascript" src="../EachNodeController.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
