--- a/tests/index.html
+++ b/tests/index.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="../ElseIfNodeController.js"></script>
 		<script type="text/javascript" src="../ElseNodeController.js"></script>
 		<script type="text/javascript" src="../EachNodeController.js"></script>
+		<script type="text/javascript" src="../VarContext.js"></script>
 		<script type="text/javascript" src="DOMIterator.test.js"></script>
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
