--- a/tests/index.html
+++ b/tests/index.html
@@ -25,6 +25,7 @@
 		<script type="text/javascript" src="Expression.test.js"></script>
 		<script type="text/javascript" src="TextElemParser.test.js"></script>
 		<script type="text/javascript" src="NodeController.test.js"></script>
+		<script type="text/javascript" src="VarContext.test.js"></script>
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
