--- a/tests/index.html
+++ b/tests/index.html
@@ -27,6 +27,7 @@
 		<script type="text/javascript" src="NodeController.test.js"></script>
 		<script type="text/javascript" src="VarContext.test.js"></script>
 		<script type="text/javascript" src="IfNodeController.test.js"></script>
+		<script type="text/javascript" src="EachNodeController.test.js"></script>
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
