--- a/tests/index.html
+++ b/tests/index.html
@@ -37,7 +37,11 @@
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
 		
-		<div id="test-templates">
+		<div id="test-output">
+			
+		</div>
+		
+		<!-- <div id="test-templates">
 			<h2>outputtest</h2>
 			<div id="outputtest">
 				<span class="name">${name}</span>
@@ -73,6 +77,6 @@
 				{{/each}}
 			</div>
 		
-		</div>
+		</div>-- >
 	</body>
 </html>
