adding AttributePosition.js to test file

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="../Expression.js"></script>
 		<script type="text/javascript" src="../TextElemParser.js"></script>
 		<script type="text/javascript" src="../ChildNodeController.js"></script>
+        <script type="text/javascript" src="../AttributePosition.js"></script>
 		<script type="text/javascript" src="../ElemPosition.js"></script>
 		<script type="text/javascript" src="../NodeController.js"></script>
 		<script type="text/javascript" src="../OutputNodeController.js"></script>
