moving attribute binding tests to separate file

--- a/tests/index.html
+++ b/tests/index.html
@@ -29,6 +29,7 @@
 		<script type="text/javascript" src="VarContext.test.js"></script>
 		<script type="text/javascript" src="IfNodeController.test.js"></script>
 		<script type="text/javascript" src="EachNodeController.test.js"></script>
+        <script type="text/javascript" src="AttributeBinding.test.js"></script>
 		<script type="text/javascript" src="tests.js"></script>
 	</head>
 	<body>
